# learnHelper

./: .gitignore  CLAUDE.md  README.md  SPECIFICATION.md  flow.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.claude/: launch.json
.claude/commands/: bug.md  feat.md  generate.md  lect.md  upgrade.md
_templates/: lesson-template.md
app/: globals.css  layout.tsx
app/api/folders/: route.ts
app/api/shortcuts/: route.ts
app/vault/: page.tsx
components/icons/: MoonIcon.tsx  SunIcon.tsx  TrashIcon.tsx
components/layout/: AppShell.tsx
components/modals/: ConfirmModal.tsx  Modal.tsx  NewFolderModal.tsx
components/sidebar/: FileTree.tsx  FileTreeNode.tsx
components/theme/: ThemeProvider.tsx  ThemeToggle.tsx
components/toast/: ToastProvider.tsx
components/viewer/: Callout.tsx  HtmlRenderer.tsx  LessonViewer.tsx  MarkdownRenderer.tsx  Mermaid.tsx  VizRenderer.tsx
desktop/: Cargo.toml  tauri.conf.json
desktop/assets/: splash.html
desktop/capabilities/: default.json
desktop/src/: lib.rs  main.rs
docs/: api-contract.md  architecture.md  coding-style.md  desktop.md  html-output-contract.md  lesson-template.md  teaching-guidelines.md  ui-guidelines.md
lib/vault/: helper.ts  paths.ts  shortcuts.ts  slug.ts  tree.ts  types.ts
scripts/: desktop-target-triple.mjs  ensure-desktop-sidecars.mjs  ensure-vaultd.mjs  open-app.mjs  prepare-desktop-resources.mjs  validate-lesson.mjs
tools/savelesson/: go.mod  lesson.go  main.go  migrate.go  shortcuts.go  slug.go
tools/vaultd/: go.mod  main.go
(+12 files in other folders)
