[package]
name = "notes-desktop"
version = "0.1.0"
description = "Notes desktop shell"
authors = ["you"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "notes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "notes-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
